change link to /search

--- a/src/app/day/day.component.html
+++ b/src/app/day/day.component.html
@@ -107,7 +107,7 @@
 		<button type="button" style="cursor: pointer;" class="btn-link link nav-link" href="#" (click)="open(settings)">Настройки</button>
 	  </li>
 	  <li class="nav-item">
-			<a class="nav-link" href="/search">Поиск по святцам</a>
+			<a class="nav-link" href="search">Поиск по святцам</a>
 		<!-- <button type="button" style="cursor: pointer;" class="btn-link link nav-link" href="#" (click)="open(about)">Поиск</button> -->
 	  </li>
 	</ul>
