--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -2,3 +2,63 @@
     width:100%;
     margin-top: 10px;
 }
+
+
+@font-face {
+    font-family: Turaevo;
+    src: url('../fonts/Turaevo.ttf');
+}
+@font-face {
+    font-family: Starousp;
+    src: url('../fonts/StusUcs.ttf');
+}
+@font-face {
+    font-family: Ostr;
+    src: url('../fonts/HilandarUcs.ttf');
+}
+@font-face {
+    font-family: Triod;
+    src: url('../fonts/TriUcs.ttf');
+}
+@font-face {
+    font-family: Pochaevsk;
+    src: url('../fonts/PochUcs.ttf');
+}
+@font-face {
+    font-family: Grebnev;
+    src: url('../fonts/GrebnevUCS.ttf');
+}
+
+.o_small {
+	font-size: 1.2em;
+}
+.o_default {
+	font-size: 1.6em;
+}
+.o_big {
+	font-size: 1.8em;
+}
+
+.turaevo {
+	font-family: Turaevo;
+}
+.starousp {
+	font-family: Starousp;
+}
+.ostr {
+	font-family: Ostr;
+}
+.triod {
+	font-family: Triod;
+}
+.pochaevsk {
+	font-family: Pochaevsk;
+}
+.grebnev {
+	font-family: Grebnev;
+}
+
+
+.text-red {
+	color: red;
+}
